TAG: qcreports_db-6-0-24-13
DATE: 10/29/2024
STAFF: lec
wts2-1571/e4g-54/tweak WF_SupplementalData.rpt so that it excludes gxdht only papers
#        modified:   mgd/WF_SupplementalData.py

TAG: qcreports_db-6-0-24-13
TAG: qcreports_db-6-0-24-12
TAG: qcreports_db-6-0-24-11
TAG: qcreports_db-6-0-24-10
TAG: qcreports_db-6-0-24-9
TAG: qcreports_db-6-0-24-8
DATE: 10/25/2024
STAFF: lec
wts2-1565/e4g-39/GXD HT: Missing PMIDs
#       new file:   mgd/GXD_HTPubMed.py

TAG: qcreports_db-6-0-24-7
DATE: 10/22/2024
STAFF: lec
wts2-1567/e4g-42/change sort order of custom report: GXD HT Experiment notes displayed to the public
#       modified:   pwi/GXD_HTExperimentCuratedNote.py

TAG: qcreports_db-6-0-24-6
DATE: 10/08/2024
STAFF: lec
wts2-1563/e4g-29/tweak to existing Unused image panes from full coded references QC (GXD #8)
#       modified:   mgd/GXD_ImagesUnused.py

TAG: qcreports_db-6-0-24-5
DATE: 08/28/2024
STAFF: lec
wts2-1377/fl2-960/QC reports for MP-HP match tool
#       new file:   weekly/VOC_OntologyExactMatch.py

TAG: qcreports_db-6-0-24-4
DATE: 08/26/2024
STAFF: lec
wts2-1541/fl2-957/obsoletes showing in MP Ontology terms added in the last week report
#       modified:   weekly/VOC_MPNewTerms.py

TAG: qcreports_db-6-0-24-3
DATE: 08/19/2024
STAFF: lec
wts2-1536/fl2-950/QC report/GXD HT missing annotations to RNA seq experiment variants
#       new file:   mgd/GXD_HTRNASeq.py

TAG: qcreports_db-6-0-24-2
DATE: 07/12/2024
STAFF: lec
wts2-1521/fl2-924/Strain Check by Strain Repository ID; make case insensitive
#       modified:   PRB_StrainRepoCheck.py

TAG: qcreports_db-6-0-24-1
TAG: qcreports_db-6-0-23-29
DATE: 07/10/2024
STAFF: jer
wts2-1486/fl2-911 Don't display Reset button unless there is a form.
wts2-1486/fl2-911 Enable file upload. Required major rewrite.

TAG: qcreports_db-6-0-23-28
DATE: 07/02/2024
STAFF: lec
wts2-1512/fl2-913/emageload retire/qcr.shtml

TAG: qcreports_db-6-0-23-27
DATE: 06/27/2024
STAFF: lec