@@ -185,6 +185,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTRNASeq.rpt">RNA seq experiments missing needed experimental variable</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTPubMed.rpt">Curated GXD HT Experiments with PMIDs Issues</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTOverview.rpt">All GXD HT Experiments</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_HTSampleNoRNAType.rpt">RNA-Seq Samples missing RNA-Seq Type</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTExpPubMedID.sql.rpt">HT Experiments with PMIDs used by GXD</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_HTDistinctAge.sql.rpt">Distinct Age, AgeMin, AgeMax</A>
 </OL>
